# GraphBattle

./: .gitignore  CMakeLists.txt  FormRec.cpp  README.md  main.cpp
inc/: FormRec.h  button.h  field.h  formula.h  logger.h  msgr.h  textbox.h
src/: FormRec.cpp  button.cpp  field.cpp  formula.cpp  msgr.cpp  textbox.cpp
textbox/: .gitignore  CMakeLists.txt  main.cpp
textbox/inc/: textbox.h
